# weather-forecast

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: enforcement.conf  guia-configuracao-codex.md  issue-template.md  pr-template.md  registry.md  setup-hooks.sh  tasks.md
.claude/hooks/: commit-msg  post-merge  pre-commit  pre-push
.claude/rules/: 00-trava-seguranca.md  01-principios.md  02-reconhecimento.md  03-modos-operacao.md  04-avaliacao-pos.md  05-convencoes.md  06-crura.md  07-integridade.md  08-registro-projeto.md  09-enforcement.md  (+3 more)
.githooks/: pre-push
notebooks/: 01_dataset_inspection.ipynb  02_preprocessing.ipynb  03_eda.ipynb  04_anomaly_detection.ipynb  05_prophet_baseline.ipynb  06_advanced_forecasting.ipynb  07_environmental_analysis.ipynb
scripts/: _gen_anomaly_model.py  _gen_parity_fixture.py  codex-review.sh  enable-hooks.sh  setup.sh
src/: __init__.py  conformal.py  dashboard_export.py  data_loader.py  parquet_io.py  preprocessing.py
tests/: __init__.py  test_anomaly.py  test_api.py  test_config.py  test_conformal.py  test_dashboard_export.py  test_data_loader.py  test_drift.py  test_evaluation.py  test_features.py  test_logging_setup.py  test_models.py  test_parquet_io.py  test_persistence.py  test_preprocessing.py  test_semantic_search.py  test_tracking.py  test_train.py
web/: DEPLOY.md  next.config.mjs  package-lock.json  package.json
(+132 files in other folders)
