[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-forecast"
version = "0.1.0"
description = "Global daily-mean temperature forecasting pipeline and dashboard data contract."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.3.3",
    "numpy==2.2.6",
    "scikit-learn==1.7.2",
    "lightgbm==4.6.0",
    "statsmodels==0.14.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "pyarrow==24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "nbstripout==0.9.1",
    "httpx==0.28.1",
]
serving = [
    "fastapi==0.115.14",
    "uvicorn==0.50.0",
]
mlops = [
    "mlflow-skinny==3.14.0",
    "evidently==0.7.21",
]
notebooks = [
    "prophet==1.3.0",
    "shap==0.49.1",
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "plotly==6.8.0",
    "nbformat==5.10.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weather_forecast"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Notebook code review is out of scope for issue #13 (see docs/specs/0017-dev-tooling.md);
# nbstripout (pre-commit) still covers notebook output hygiene.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
